--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <section id="home">
         <div class="hero">
-            <img src="C:\Users\itssa\Downloads\sanjana.passportphoto.png" alt="Profile Picture" class="profile-pic">
+            <img src="sanjana.passportphoto.png" alt="Profile Picture" class="profile-pic">
             <h1>Dive into My Professional World</h1>
             <p>Aspiring computer science professional with a foundation in C, Java complemented by hands-on experience in web technologies and database management.  Adaptable at collaborative environments with interpersonal skills. Seeking opportunities to leverage my skills in innovative projects for organizational success</p>
            
